hack/apiservice-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-apiserver
  namespace: default
  labels:
    app: foo
spec:
  ports:
  - name: api
    port: 443
    protocol: TCP
    targetPort: 8443
  type: ClusterIP
---
# To get to the host machine from the VM,
# the IP is 10.0.2.2 (by convention)
# ref: https://stackoverflow.com/questions/9537751/virtualbox-port-forward-from-guest-to-host
apiVersion: v1
kind: Endpoints
metadata:
  name: foo-apiserver
  namespace: default
  labels:
    app: foo
subsets:
- addresses:
  # list all external ips for this service
  - ip: 10.0.2.2
  ports:
  - name: api
    port: 8443
    protocol: TCP
